# comm_pycpp

./: .gitignore  CMakeLists.txt  README.md
include/comm_pycpp/: ConversionUtils.h  PyToCppWrapper.h
py_src/: exec_numpy.py  yolo_v5.py
src/: ConversionUtils.cpp  PyToCppWrapper.cpp
utils/: CMakeLists.txt  main.cpp
